# stellar-smart-contract

./: readme.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: package.json
frontend/src/: App.jsx
